objects/HealthCloudGA__EhrPractitioner__c.object
<CustomObject>
    <description>A person who is directly or indirectly involved in the provisioning of healthcare</description>
    <fields>
        <fullName>HealthCloudGA__Address1City__c</fullName>
        <label>Address1 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1Country__c</fullName>
        <label>Address1 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1EndDate__c</fullName>
        <label>Address1 End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1Line1__c</fullName>
        <label>Address1 Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1Line2__c</fullName>
        <label>Address1 Line2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1PostalCode__c</fullName>
        <label>Address1 Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1StartDate__c</fullName>
        <label>Address1 Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1State__c</fullName>
        <label>Address1 State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1Text__c</fullName>
        <label>Address1 Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1Use__c</fullName>
        <label>Address1 Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2City__c</fullName>
        <label>Address2 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2Country__c</fullName>
        <label>Address2 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2EndDate__c</fullName>
        <label>Address2 End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2Line1__c</fullName>
        <label>Address2 Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2PostalCode__c</fullName>
        <label>Address2 Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2StartDate__c</fullName>
        <label>Address2 Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2State__c</fullName>
        <label>Address2 State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2Text__c</fullName>
        <label>Address2 Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2Use__c</fullName>
        <label>Address2 Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3City__c</fullName>
        <label>Address3 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3Country__c</fullName>
        <label>Address3 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3EndDate__c</fullName>
        <label>Address3 End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3PostalCode__c</fullName>
        <label>Address3 Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3StartDate__c</fullName>
        <label>Address3 Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3State__c</fullName>
        <label>Address3 State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3Text__c</fullName>
        <label>Address3 Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3Use__c</fullName>
        <label>Address3 Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__BirthDate__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Communication1Code__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Communication1 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Communication1Label__c</fullName>
        <label>Communication1 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Communication1System__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Communication1 System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Communication2Code__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Communication2 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Communication2Label__c</fullName>
        <label>Communication2 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Communication2System__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Communication2 System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Communication3Code__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Communication3 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Communication3Label__c</fullName>
        <label>Communication3 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Communication3System__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Communication3 System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FamilyName1__c</fullName>
        <label>Family Name1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FamilyName2__c</fullName>
        <label>Family Name2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FamilyName3__c</fullName>
        <label>Family Name3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Gender__c</fullName>
        <label>Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__GivenName1__c</fullName>
        <label>Given Name1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__GivenName2__c</fullName>
        <label>Given Name3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__GivenName3__c</fullName>
        <label>Given Name3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>If returns true, the record will appear on Patient Card</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1City__c</fullName>
        <label>Location1 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1Country__c</fullName>
        <label>Location1 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1Description__c</fullName>
        <label>Location1 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1EndDate__c</fullName>
        <label>Location1 End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1Id__c</fullName>
        <externalId>true</externalId>
        <label>Location1 Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1Line1__c</fullName>
        <label>Location1 Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1Line2__c</fullName>
        <label>Location1 Line2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1Name__c</fullName>
        <label>Location1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1PostalCode__c</fullName>
        <label>Location1 Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1StartDate__c</fullName>
        <label>Location1 Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1State__c</fullName>
        <label>Location1 State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1TelecomPeriodEnd__c</fullName>
        <label>Location1 Telecom Period End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1TelecomPeriodStart__c</fullName>
        <label>Location1 Telecom Period Start</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1TelecomSystem__c</fullName>
        <label>Location1 Telecom System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1TelecomUse__c</fullName>
        <label>Location1 Telecom Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1TelecomValue__c</fullName>
        <label>Location1 Telecom Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1Text__c</fullName>
        <label>Location1 Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1Type__c</fullName>
        <label>Location1 Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1Use__c</fullName>
        <label>Location1 Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2City__c</fullName>
        <label>Location2 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2Country__c</fullName>
        <label>Location2 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2Description__c</fullName>
        <label>Location2 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2EndDate__c</fullName>
        <label>Location2 End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2Id__c</fullName>
        <externalId>true</externalId>
        <label>Location2 Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2Line1__c</fullName>
        <label>Location2 Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2Name__c</fullName>
        <label>Location2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2PostalCode__c</fullName>
        <label>Location2 Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2StartDate__c</fullName>
        <label>Location2 Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2State__c</fullName>
        <label>Location2 State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2TelecomPeriodEnd__c</fullName>
        <label>Location2 Telecom Period End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2TelecomPeriodStart__c</fullName>
        <label>Location2 Telecom Period Start</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2TelecomSystem__c</fullName>
        <label>Location2 Telecom System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2TelecomUse__c</fullName>
        <label>Location2 Telecom Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2TelecomValue__c</fullName>
        <label>Location2 Telecom Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2Text__c</fullName>
        <label>Location2 Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2Type__c</fullName>
        <label>Location2 Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2Use__c</fullName>
        <label>Location2 Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3City__c</fullName>
        <label>Location3 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3Country__c</fullName>
        <label>Location3 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3Description__c</fullName>
        <label>Location3 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3EndDate__c</fullName>
        <label>Location3 End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3Id__c</fullName>
        <externalId>true</externalId>
        <label>Location3 Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3Name__c</fullName>
        <label>Location3 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3PostalCode__c</fullName>
        <label>Location3 Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3StartDate__c</fullName>
        <label>Location3 Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3State__c</fullName>
        <label>Location3 State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3TelecomPeriodEnd__c</fullName>
        <label>Location3 Telecom Period End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3TelecomPeriodStart__c</fullName>
        <label>Location3 Telecom Period Start</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3TelecomSystem__c</fullName>
        <label>Location3 Telecom System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3TelecomUse__c</fullName>
        <label>Location3 Telecom Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3TelecomValue__c</fullName>
        <label>Location3 Telecom Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3Text__c</fullName>
        <label>Location3 Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3Type__c</fullName>
        <label>Location3 Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3Use__c</fullName>
        <label>Location3 Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Name255__c</fullName>
        <label>Name 255</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Name__c</fullName>
        <label>Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Organization255__c</fullName>
        <label>Organization 255</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Organization__c</fullName>
        <label>Organization</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Period__c</fullName>
        <label>Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PhotoUrl__c</fullName>
        <label>Photo URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrefixName1__c</fullName>
        <label>Prefix Name1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrefixName2__c</fullName>
        <label>Prefix Name2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrefixName3__c</fullName>
        <label>Prefix Name3</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>SourceSystem</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SpecialtyCode__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Specialty Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SpecialtySystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Specialty System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SuffixName1__c</fullName>
        <label>Suffix Name1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SuffixName2__c</fullName>
        <label>Suffix Name2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SuffixName3__c</fullName>
        <label>Suffix Name3</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom1PeriodEndDate__c</fullName>
        <description>End of Period Time period when the contact was/is in use</description>
        <label>Telecom1 Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom1PeriodStartDate__c</fullName>
        <description>Start of Period Time period when the contact was/is in use</description>
        <label>Telecom1 Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom1System__c</fullName>
        <description>phone | fax | email | url</description>
        <label>Telecom1 System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom1Use__c</fullName>
        <description>home | work | temp | old | mobile</description>
        <label>Telecom1 Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom1Value__c</fullName>
        <description>The actual contact details</description>
        <label>Telecom1 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom2PeriodEndDate__c</fullName>
        <description>End of Period Time period when the contact was/is in use</description>
        <label>Telecom2 Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom2PeriodStartDate__c</fullName>
        <description>Start of Period Time period when the contact was/is in use</description>
        <label>Telecom2 Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom2System__c</fullName>
        <description>phone | fax | email | url</description>
        <label>Telecom2 System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom2Use__c</fullName>
        <description>home | work | temp | old | mobile</description>
        <label>Telecom2 Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom2Value__c</fullName>
        <description>The actual contact details</description>
        <label>Telecom2 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom3PeriodEndDate__c</fullName>
        <description>End of Period Time period when the contact was/is in use</description>
        <label>Telecom3 Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom3PeriodStartDate__c</fullName>
        <description>Start of Period Time period when the contact was/is in use</description>
        <label>Telecom3 Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom3System__c</fullName>
        <description>phone | fax | email | url</description>
        <label>Telecom3 System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom3Use__c</fullName>
        <description>home | work | temp | old | mobile</description>
        <label>Telecom3 Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom3Value__c</fullName>
        <description>The actual contact details</description>
        <label>Telecom3 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EHR Practitioner</label>
    <nameField>
        <displayFormat>Prac-{0}</displayFormat>
        <label>EHR Practitioner ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Practitioners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>